stylesheets/stylesheet.css
#welcomeimg {
    /*position:absolute;
    clip:rect(0px,700px,400px,0px);*/
    width:700px;
}

header {
    width:700px;
    margin-left:auto;
    margin-right:auto;
}

div.navigation {
    font-family:"Helvetica";
    text-decoration:none;
    margin-bottom:10px;
}

a.navigation:link {
    text-decoration:none;
    font-size:22px;
    font-weight:bold;
    margin-right:40px;
    color:#888888;
}
a.navigation:visited {
    color:#888888;
}
a.navigation:hover {
    color:#424242;
}

t.navigation {
    text-decoration:none;
    font-size:22px;
    font-weight:bold;
    color:#424242;
    margin-right:40px;
}

html {
    background-color:#FEFEFE;
}

.social-links {
    float: right;
}

.social-links-item {
    height:22px;
    width:22px;
    display: inline-block;
    margin-left: 13px;
    opacity: 0.5;
    vertical-align: middle;
}

.social-links-item:hover {
    opacity: 1;
}

.github-icon {
    background: url(../images/social/github.jpg) no-repeat;
}

.mail-icon {
    background: url(../images/socialsprite.png) no-repeat -37px -35px;
}

.irc-icon {
    background: url(../images/socialsprite.png) no-repeat -74px -35px;
    width: 26px !important;
}

.twitter-icon {
    background: url(../images/social/twitter.jpg) no-repeat;
}

.google-plus-icon {
    background: url(../images/social/googleplus.jpg) no-repeat;
}

.facebook-icon {
    background: url(../images/social/facebook.jpg) no-repeat;
}

.youtube-icon {
    background: url(../images/social/youtube.jpg) no-repeat;
}
.welcomemsg {
    font-family:"Helvetica";
    text-align:center;
    margin:0px;
    color:#424242;
}



.topimage {
    position:relative;
    width:700px;
    height:400px;
    overflow:hidden;
}



.content {
    width:600px;
    margin-left:auto;
    margin-right:auto;
    font-family:"Helvetica";
    color:#666666;
    margin-top:20px;
}

p.contentleft {
    width:290px;
    float:left;
    margin:5px;
}

img.contentright {
    display:inline-block;
    width:290px;
    float:right;
    margin:1px;
    box-shadow:2px 2px 8px #888888;
    border-color:#FFFFFF;
    border-width:4px;
    border-style:solid;
}

.project-image {
    display:block;
    width:200px;
    margin:1px;
    box-shadow:2px 2px 8px #888888;
    border-color:#FFFFFF;
    border-width:4px;
    border-style:solid;
}

.project-description {
    display:block;
    width:370px;
    margin:10px;
}

.right {
    float: right;
}

.left {
    float:left;
}

.project-item {
    display:table-row;
}

a {
    color:#424242;
}

a:hover {
    color:#5577FF;
}

.center {
    display:block;
    margin-left:auto;
    margin-right:auto;
}

